--- a/pages/code/asdocs/all-classes.html
+++ b/pages/code/asdocs/all-classes.html
@@ -406,6 +406,9 @@
 <td><a href="com/threerings/flash/SimpleIconButton.html">SimpleIconButton</a></td>
 </tr>
 <tr>
+<td><a href="com/threerings/flash/SimpleSkinButton.html">SimpleSkinButton</a></td>
+</tr>
+<tr>
 <td><a href="com/threerings/flash/SimpleTextButton.html">SimpleTextButton</a></td>
 </tr>
 <tr>
