--- a/pages/code/asdocs/all-index-C.html
+++ b/pages/code/asdocs/all-index-C.html
@@ -902,6 +902,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("CÂ
      Array according to their distance from the specified Point.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/SimpleSkinButton.html#createState()">createState</a>(bmp, text, textFieldProps, textFormatProps, padding, height, xshift, yshift, outline) &mdash; Method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/SimpleSkinButton.html">SimpleSkinButton</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/MediaContainer.html#createVideoUI()">createVideoUI</a>(player:<a href="com/threerings/flash/media/VideoPlayer.html" onclick="javascript:loadClassListFrame('com/threerings/flash/media./class-list.html');">com.threerings.flash.media:VideoPlayer</a>) &mdash; Method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/MediaContainer.html">MediaContainer</a></td>
 </tr>
 <tr>
