--- a/pages/code/asdocs/all-index-G.html
+++ b/pages/code/asdocs/all-index-G.html
@@ -404,7 +404,21 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
      Enumerates the ids of all entities in this room.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/RoomSubControlClient.html#getEntityIds()">getEntityIds</a>(type) &mdash; Method in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/RoomSubControlClient.html">RoomSubControlClient</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Enumerates the ids of all entities in this room.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/EntityControl.html#getEntityProperty()">getEntityProperty</a>(key, entityId) &mdash; Method in class com.whirled.<a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/EntityControl.html">EntityControl</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Looks up and returns the specified property for the specified entity.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/RoomSubControlClient.html#getEntityProperty()">getEntityProperty</a>(key, entityId) &mdash; Method in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/RoomSubControlClient.html">RoomSubControlClient</a></td>
 </tr>
 <tr>
 <td width="20"></td><td>
