--- a/pages/code/asdocs/all-index-S.html
+++ b/pages/code/asdocs/all-index-S.html
@@ -816,6 +816,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
      Constructor.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/SimpleSkinButton.html">SimpleSkinButton</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/package-detail.html">com.threerings.flash</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ A simple skin that shifts the text in the down state.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/SimpleSkinButton.html#SimpleSkinButton()">SimpleSkinButton</a>(skin, text, textFieldProps, textFormatProps, padding, height, xshift, yshift, outline) &mdash; Constructor in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/SimpleSkinButton.html">SimpleSkinButton</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Create a SimpleSkinButton.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/SimpleTextButton.html">SimpleTextButton</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/package-detail.html">com.threerings.flash</a></td>
 </tr>
 <tr>
