--- a/pages/code/asdocs/all-index-T.html
+++ b/pages/code/asdocs/all-index-T.html
@@ -278,6 +278,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
      Return a copy of the internal storage array.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/ImageUtil.html#toBitmapData()">toBitmapData</a>(spec) &mdash; Static method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/ImageUtil.html">ImageUtil</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Takes a BitmapData, Bitmap, or Class that will turn into either, and returns
+     a reference to the BitmapData, or returns null.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/StringUtil.html#toBytes()">toBytes</a>(s) &mdash; Static method in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/StringUtil.html">StringUtil</a></td>
 </tr>
 <tr>
