--- a/pages/code/contrib/asdocs/all-classes.html
+++ b/pages/code/contrib/asdocs/all-classes.html
@@ -718,6 +718,9 @@
 <td><a href="com/whirled/contrib/platformer/game/ShotController.html">ShotController</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/platformer/net/ShotMessage.html">ShotMessage</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/platformer/display/ShotSprite.html">ShotSprite</a></td>
 </tr>
 <tr>
@@ -763,6 +766,9 @@
 <td><a href="com/whirled/contrib/platformer/display/SpawnerSprite.html">SpawnerSprite</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/platformer/net/SpawnMessage.html">SpawnMessage</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/platformer/board/StaticTask.html">StaticTask</a></td>
 </tr>
 <tr>
@@ -800,6 +806,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/simplegame/net/TickedMessageManager.html"><i>TickedMessageManager</i></a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/net/TickMessage.html">TickMessage</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/simplegame/tasks/TimedTask.html">TimedTask</a></td>
