--- a/pages/code/contrib/asdocs/all-index-M.html
+++ b/pages/code/contrib/asdocs/all-index-M.html
@@ -440,6 +440,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("MÂ
 <td width="20"></td><td> This function is the callback for messages.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/SpawnerController.html#messageReceived()">messageReceived</a>(event) &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/SpawnerController.html">SpawnerController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html#_messageTypes">_messageTypes</a> &mdash; Property in class com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html">OnlineTickedMessageManager</a></td>
 </tr>
 <tr>
