--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/class-list.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/class-list.html
@@ -34,7 +34,16 @@
 <td><a href="QueueMessage.html">QueueMessage</a></td>
 </tr>
 <tr>
+<td><a href="ShotMessage.html">ShotMessage</a></td>
+</tr>
+<tr>
+<td><a href="SpawnMessage.html">SpawnMessage</a></td>
+</tr>
+<tr>
 <td><a href="ThrottlingMessageManager.html">ThrottlingMessageManager</a></td>
+</tr>
+<tr>
+<td><a href="TickMessage.html">TickMessage</a></td>
 </tr>
 <tr>
 <td><a href="WrapperMessage.html">WrapperMessage</a></td>
