--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/package-detail.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/package-detail.html
@@ -58,9 +58,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="QueueMessage.html">QueueMessage</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow0">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ShotMessage.html">ShotMessage</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="SpawnMessage.html">SpawnMessage</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ThrottlingMessageManager.html">ThrottlingMessageManager</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="TickMessage.html">TickMessage</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="WrapperMessage.html">WrapperMessage</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 </table>
