--- a/pages/code/asdocs/com/threerings/flash/ImageUtil.html
+++ b/pages/code/asdocs/com/threerings/flash/ImageUtil.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="ImageUtil,com.threerings.flash.ImageUtil,createErrorBitmap,createErrorImage" name="keywords">
+<meta content="ImageUtil,com.threerings.flash.ImageUtil,createErrorBitmap,createErrorImage,toBitmapData" name="keywords">
 <title>com.threerings.flash.ImageUtil</title>
 </head>
 <body>
@@ -68,6 +68,15 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
      of the specified dimensions.</div>
 </td><td class="summaryTableOwnerCol">ImageUtil</td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#toBitmapData()">toBitmapData</a>(spec:*):BitmapData</div>
+<div class="summaryTableDescription">[static]
+     Takes a BitmapData, Bitmap, or Class that will turn into either, and returns
+     a reference to the BitmapData, or returns null.</div>
+</td><td class="summaryTableOwnerCol">ImageUtil</td>
+</tr>
 </table>
 </div>
 <script type="text/javascript" language="javascript">
@@ -121,6 +130,30 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20"></td><td><code>DisplayObject</code></td>
+</tr>
+</table>
+</div>
+<a name="toBitmapData()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">toBitmapData</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function toBitmapData(spec:*):BitmapData</code><p>
+     Takes a BitmapData, Bitmap, or Class that will turn into either, and returns
+     a reference to the BitmapData, or returns null.
+     </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">spec</span>:*</code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>BitmapData</code></td>
 </tr>
 </table>
 </div>
