--- a/pages/code/asdocs/com/threerings/flash/class-list.html
+++ b/pages/code/asdocs/com/threerings/flash/class-list.html
@@ -94,6 +94,9 @@
 <td><a href="SimpleIconButton.html">SimpleIconButton</a></td>
 </tr>
 <tr>
+<td><a href="SimpleSkinButton.html">SimpleSkinButton</a></td>
+</tr>
+<tr>
 <td><a href="SimpleTextButton.html">SimpleTextButton</a></td>
 </tr>
 <tr>
