--- a/pages/code/asdocs/com/whirled/EntityControl.html
+++ b/pages/code/asdocs/com/whirled/EntityControl.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../print.css" type="text/css" media="print">
-<meta content="EntityControl,com.whirled.EntityControl,PROP_DIMENSIONS,PROP_HOTSPOT,PROP_LOCATION_LOGICAL,PROP_LOCATION_PIXEL,PROP_MEMBER_ID,PROP_MOVE_SPEED,PROP_NAME,PROP_ORIENTATION,PROP_TYPE,TYPE_AVATAR,TYPE_FURNI,TYPE_PET,canEditRoom,clearPopup,dispatchCtrlEvent,getCamera,getDefaultDataPack,getEntityIds,getEntityProperty,getInstanceId,getLogicalLocation,getMemories,getMemory,getMicrophone,getMyEntityId,getPixelLocation,getRoomBounds,getViewerName,hasControl,registerPropertyProvider,requestControl,sendMessage,sendSignal,setHotSpot,setMemory,setTickInterval,showPopup,triggerAction" name="keywords">
+<meta content="EntityControl,com.whirled.EntityControl,PROP_DIMENSIONS,PROP_HOTSPOT,PROP_LOCATION_LOGICAL,PROP_LOCATION_PIXEL,PROP_MEMBER_ID,PROP_MOVE_SPEED,PROP_NAME,PROP_ORIENTATION,PROP_TYPE,TYPE_AVATAR,TYPE_FURNI,TYPE_PET,canEditRoom,clearPopup,dispatchCtrlEvent,getCamera,getDefaultDataPack,getEntityIds,getEntityProperty,getInstanceId,getLogicalLocation,getMemories,getMemory,getMicrophone,getMyEntityId,getPixelLocation,getRoomBounds,getViewerName,hasControl,registerPropertyProvider,sendMessage,sendSignal,setHotSpot,setMemory,setTickInterval,showPopup,triggerAction" name="keywords">
 <title>com.whirled.EntityControl</title>
 </head>
 <body>
@@ -249,14 +249,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#requestControl()">requestControl</a>():void</div>
-<div class="summaryTableDescription">
-     Request to have this client control all the instances of this entity.</div>
-</td><td class="summaryTableOwnerCol">EntityControl</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
 <a class="signatureLink" href="#sendMessage()">sendMessage</a>(name:String, arg:Object = null):void</div>
 <div class="summaryTableDescription">
      Send a message to other instances of this entity, resulting in a MESSAGE_RECEIVED event.</div>
@@ -447,7 +439,8 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">EntityControl</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_MEMBER_ID">PROP_MEMBER_ID</a> : String = "std:member_id"<div class="summaryTableDescription">[static] The unique Whirled player ID of the owner on an avatar (int).</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_MEMBER_ID">PROP_MEMBER_ID</a> : String = "std:member_id"<div class="summaryTableDescription">[static]
+     The unique Whirled player ID (int) of the wearer of the avatar, or the owner of the pet.</div>
 </td><td class="summaryTableOwnerCol">EntityControl</td>
 </tr>
 <tr class="">
@@ -455,15 +448,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">EntityControl</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_NAME">PROP_NAME</a> : String = "std:name"<div class="summaryTableDescription">[static] The non-unique display name of the entity (a String).</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_NAME">PROP_NAME</a> : String = "std:name"<div class="summaryTableDescription">[static]
+     The non-unique display name of the entity (a String).</div>
 </td><td class="summaryTableOwnerCol">EntityControl</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_ORIENTATION">PROP_ORIENTATION</a> : String = "std:orientation"<div class="summaryTableDescription">[static] The entity facing direction (a Number).</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_ORIENTATION">PROP_ORIENTATION</a> : String = "std:orientation"<div class="summaryTableDescription">[static]
+     The entity facing direction (a Number).</div>
 </td><td class="summaryTableOwnerCol">EntityControl</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_TYPE">PROP_TYPE</a> : String = "std:type"<div class="summaryTableDescription">[static] The type of the entity, TYPE_AVATAR, TYPE_PET or TYPE_FURNI.</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_TYPE">PROP_TYPE</a> : String = "std:type"<div class="summaryTableDescription">[static]
+     The type of the entity, TYPE_AVATAR, TYPE_PET or TYPE_FURNI.</div>
 </td><td class="summaryTableOwnerCol">EntityControl</td>
 </tr>
 <tr class="">
@@ -865,10 +861,6 @@ showHideInherited();
      Is this client in control?
           </p><p>Control is a mutually exclusive lock across all instances of the entity (i.e. running in
      other browsers across the network). Only one client can hold the lock at any time.</p>
-          <p>Note: control is <em>not</em> automatically assigned. If an entity wishes to obtain
-     control, it should first call <code>requestControl</code> and it will then receive a
-     <code>CONTROL_ACQUIRED</code> event if and when control has been assigned to this client.
-     There are no guarantees which of the requesting clients will receive it, or when.</p>
      <p></p>
 <span class="label">Returns</span>
 <table border="0" cellspacing="0" cellpadding="0">
@@ -897,17 +889,6 @@ showHideInherited();
 </tr>
 </table>
 </div>
-<a name="requestControl()"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">requestControl</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>public function requestControl():void</code><p>
-     Request to have this client control all the instances of this entity. The other instances
-     are the same code, but running in other browsers. See the <code>hasControl</code> method.
-     </p></div>
 <a name="sendMessage()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1041,8 +1022,7 @@ showHideInherited();
 <code>public function setTickInterval(interval:Number):void</code><p>
      Configures the interval on which this item is "ticked" in milliseconds. If the client
      setting this interval is in control, it will get a <code>timer</code> event at the
-     specified interval. Otherwise, the entity will request control from the server, and only
-     set the timer once control was granted (if ever).
+     specified interval.
           </p><p>Ticking mechanism is turned off by default. Application needs to set the interval
      explicitly to start receiving tick events. The tick interval can be no smaller than 100ms
      to avoid bogging down the client.</p>
@@ -1349,7 +1329,8 @@ showHideInherited();
 <div class="detailBody">
 <code>public static const PROP_LOCATION_LOGICAL:String = "std:location_logical"</code><p>
      The entity's location in logical coordinates (an Array [ x, y, z ]). x, y, and z are Numbers
-     between 0 and 1 or null if our location is unknown. Use with getEntityProperty(). </p></div>
+     between 0 and 1 or null if our location is unknown. Use with getEntityProperty().
+     </p></div>
 <a name="PROP_LOCATION_PIXEL"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1360,7 +1341,8 @@ showHideInherited();
 <code>public static const PROP_LOCATION_PIXEL:String = "std:location_pixel"</code><p>
      The entity's location in pixel coordinates (an Array [ x, y, z ]). Obviously there is not a
      real Z coordinate, but the value will coorrespond to real Z distance in proportion to the
-     distance in X and Y. Use with getEntityProperty(). </p></div>
+     distance in X and Y. Use with getEntityProperty().
+     </p></div>
 <a name="PROP_MEMBER_ID"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1368,8 +1350,10 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const PROP_MEMBER_ID:String = "std:member_id"</code><p> The unique Whirled player ID of the owner on an avatar (int).
-     Querying this on non-avatars returns null. Use with getEntityProperty(). </p></div>
+<code>public static const PROP_MEMBER_ID:String = "std:member_id"</code><p>
+     The unique Whirled player ID (int) of the wearer of the avatar, or the owner of the pet.
+     Use with getEntityProperty().
+     </p></div>
 <a name="PROP_MOVE_SPEED"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1385,8 +1369,10 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const PROP_NAME:String = "std:name"</code><p> The non-unique display name of the entity (a String). Use with getEntityProperty().
-     Valid only for "avatar" and "pet" entity types. Invalid entity types will return null. </p></div>
+<code>public static const PROP_NAME:String = "std:name"</code><p>
+     The non-unique display name of the entity (a String). Use with getEntityProperty().
+     Valid only for "avatar" and "pet" entity types. Invalid entity types will return null.
+     </p></div>
 <a name="PROP_ORIENTATION"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1394,8 +1380,10 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const PROP_ORIENTATION:String = "std:orientation"</code><p> The entity facing direction (a Number). Use with getEntityProperty().
-     Valid only for "avatar" and "pet" entity types. </p></div>
+<code>public static const PROP_ORIENTATION:String = "std:orientation"</code><p>
+     The entity facing direction (a Number). Use with getEntityProperty().
+     Valid only for "avatar" and "pet" entity types.
+     </p></div>
 <a name="PROP_TYPE"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1403,8 +1391,10 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const PROP_TYPE:String = "std:type"</code><p> The type of the entity, TYPE_AVATAR, TYPE_PET or TYPE_FURNI.
-     Use with getEntityProperty(). </p></div>
+<code>public static const PROP_TYPE:String = "std:type"</code><p>
+     The type of the entity, TYPE_AVATAR, TYPE_PET or TYPE_FURNI.
+     Use with getEntityProperty().
+     </p></div>
 <a name="TYPE_AVATAR"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
