--- a/pages/code/asdocs/com/whirled/avrg/PropControl.html
+++ b/pages/code/asdocs/com/whirled/avrg/PropControl.html
@@ -275,14 +275,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="../EntityControl.html#requestControl()">requestControl</a>():void</div>
-<div class="summaryTableDescription">
-     Request to have this client control all the instances of this entity.</div>
-</td><td class="summaryTableOwnerCol"><a href="../EntityControl.html">EntityControl</a></td>
-</tr>
-<tr class="hideInheritedMethod">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
 <a class="signatureLink" href="../EntityControl.html#sendMessage()">sendMessage</a>(name:String, arg:Object = null):void</div>
 <div class="summaryTableDescription">
      Send a message to other instances of this entity, resulting in a MESSAGE_RECEIVED event.</div>
@@ -507,7 +499,8 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol"><a href="../EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedConstant">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../EntityControl.html#PROP_MEMBER_ID">PROP_MEMBER_ID</a> : String = "std:member_id"<div class="summaryTableDescription">[static] The unique Whirled player ID of the owner on an avatar (int).</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../EntityControl.html#PROP_MEMBER_ID">PROP_MEMBER_ID</a> : String = "std:member_id"<div class="summaryTableDescription">[static]
+     The unique Whirled player ID (int) of the wearer of the avatar, or the owner of the pet.</div>
 </td><td class="summaryTableOwnerCol"><a href="../EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedConstant">
@@ -515,15 +508,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol"><a href="../EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedConstant">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../EntityControl.html#PROP_NAME">PROP_NAME</a> : String = "std:name"<div class="summaryTableDescription">[static] The non-unique display name of the entity (a String).</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../EntityControl.html#PROP_NAME">PROP_NAME</a> : String = "std:name"<div class="summaryTableDescription">[static]
+     The non-unique display name of the entity (a String).</div>
 </td><td class="summaryTableOwnerCol"><a href="../EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedConstant">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../EntityControl.html#PROP_ORIENTATION">PROP_ORIENTATION</a> : String = "std:orientation"<div class="summaryTableDescription">[static] The entity facing direction (a Number).</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../EntityControl.html#PROP_ORIENTATION">PROP_ORIENTATION</a> : String = "std:orientation"<div class="summaryTableDescription">[static]
+     The entity facing direction (a Number).</div>
 </td><td class="summaryTableOwnerCol"><a href="../EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedConstant">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../EntityControl.html#PROP_TYPE">PROP_TYPE</a> : String = "std:type"<div class="summaryTableDescription">[static] The type of the entity, TYPE_AVATAR, TYPE_PET or TYPE_FURNI.</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../EntityControl.html#PROP_TYPE">PROP_TYPE</a> : String = "std:type"<div class="summaryTableDescription">[static]
+     The type of the entity, TYPE_AVATAR, TYPE_PET or TYPE_FURNI.</div>
 </td><td class="summaryTableOwnerCol"><a href="../EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedConstant">
