--- a/pages/code/contrib/asdocs/all-index-B.html
+++ b/pages/code/contrib/asdocs/all-index-B.html
@@ -729,6 +729,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("BÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/ShotMessage.html#bytes">bytes</a> &mdash; Property in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/ShotMessage.html">ShotMessage</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/WrapperMessage.html#bytes">bytes</a> &mdash; Property in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/WrapperMessage.html">WrapperMessage</a></td>
 </tr>
 <tr>
