--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/board/Board.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/board/Board.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Board,com.whirled.contrib.platformer.board.Board,ACTORS,ACTOR_ADDED,BOTTOM_BOUND,DYNAMIC_ADDED,DYNAMIC_REMOVED,GENERICS,GROUP_ADDED,ITEM_BACK,ITEM_DOWN,ITEM_FORWARD,ITEM_REMOVED,ITEM_UP,ITEM_UPDATED,LEFT_BOUND,PIECE_ADDED,PIECE_LOADED,PIECE_REMOVED,PLATFORMS,RIGHT_BOUND,SHOT_ADDED,SPAWNERS,TOP_BOUND,_actors,_bound,_dynamicIns,_dynamics,_globalDynamicIns,_groupNames,_listeners,_maxId,_name,_pieceTree,_shots,_xml,addActor,addDynamic,addDynamicIns,addEventListener,addOrReplaceXML,addPiece,addPieceGroup,addShot,adjustMaxId,boardHas,flipPiece,genDynamicsXML,genPieceTreeXML,getActor,getActors,getBackgroundXML,getBound,getDynamic,getDynamicIns,getDynamicInsById,getDynamics,getDynamicsXML,getEventXML,getGroup,getGroupNames,getItem,getMaxId,getName,getPieceTreeXML,getPieces,getXML,hasActor,isItem,loadCoords,loadDynamic,loadDynamics,loadFromXML,loadPieceTree,moveItemBack,moveItemDown,moveItemForward,moveItemUp,removeDynamic,removeEventListener,removeItem,sendEvent,setBound,setDynamicIns,setName,updateDynamicIns,updatePiece" name="keywords">
+<meta content="Board,com.whirled.contrib.platformer.board.Board,ACTORS,ACTOR_ADDED,BOTTOM_BOUND,DYNAMIC_ADDED,DYNAMIC_REMOVED,GENERICS,GROUP_ADDED,ITEM_BACK,ITEM_DOWN,ITEM_FORWARD,ITEM_REMOVED,ITEM_UP,ITEM_UPDATED,LEFT_BOUND,PIECE_ADDED,PIECE_LOADED,PIECE_REMOVED,PLATFORMS,RIGHT_BOUND,SHOT_ADDED,SPAWNERS,TOP_BOUND,_actors,_bound,_dynamicIns,_dynamics,_globalDynamicIns,_groupNames,_listeners,_maxId,_name,_pieceTree,_shotId,_shots,_xml,addActor,addDynamic,addDynamicIns,addEventListener,addOrReplaceXML,addPiece,addPieceGroup,addShot,adjustMaxId,boardHas,flipPiece,genDynamicsXML,genPieceTreeXML,getActor,getActors,getBackgroundXML,getBound,getDynamic,getDynamicIns,getDynamicInsById,getDynamics,getDynamicsXML,getEventXML,getGroup,getGroupNames,getItem,getMaxId,getName,getPieceTreeXML,getPieces,getXML,hasActor,isItem,loadCoords,loadDynamic,loadDynamics,loadFromXML,loadPieceTree,moveItemBack,moveItemDown,moveItemForward,moveItemUp,removeDynamic,removeEventListener,removeItem,reserveId,sendEvent,setBound,setDynamicIns,setName,updateDynamicIns,updatePiece" name="keywords">
 <title>com.whirled.contrib.platformer.board.Board</title>
 </head>
 <body>
@@ -60,7 +60,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">Board</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_dynamicIns">_dynamicIns</a> : Array<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_dynamicIns">_dynamicIns</a> : Object<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Board</td>
 </tr>
 <tr class="">
@@ -89,6 +89,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_pieceTree">_pieceTree</a> : Array<div class="summaryTableDescription"> All the pieces on the board.</div>
+</td><td class="summaryTableOwnerCol">Board</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_shotId">_shotId</a> : int = 100000<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Board</td>
 </tr>
 <tr class="">
@@ -367,6 +371,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#reserveId()">reserveId</a>():int</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Board</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#setBound()">setBound</a>(idx:int, bound:int):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Board</td>
@@ -616,7 +627,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected var _dynamicIns:Array</code>
+<code>protected var _dynamicIns:Object</code>
 </div>
 <a name="_dynamics"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -680,6 +691,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>protected var _pieceTree:Array</code><p> All the pieces on the board. </p></div>
+<a name="_shotId"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_shotId</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _shotId:int = 100000</code>
+</div>
 <a name="_shots"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1569,6 +1589,22 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">tree</span>:String</code></td>
+</tr>
+</table>
+</div>
+<a name="reserveId()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">reserveId</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function reserveId():int</code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>int</code></td>
 </tr>
 </table>
 </div>
