--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/board/Collider.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/board/Collider.html
@@ -63,7 +63,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">Collider</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_dynamics">_dynamics</a> : HashMap<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_dynamics">_dynamics</a> : Object<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Collider</td>
 </tr>
 <tr class="">
@@ -362,7 +362,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected var _dynamics:HashMap</code>
+<code>protected var _dynamics:Object</code>
 </div>
 <a name="_lines"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
