--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/DynamicController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/DynamicController.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="DynamicController,com.whirled.contrib.platformer.game.DynamicController,_chandlers,_controller,_dynamic,_task,addCollisionHandler,createTask,getCollisionHandler,getDynamic,getTask,postCollider,postTick,tick" name="keywords">
+<meta content="DynamicController,com.whirled.contrib.platformer.game.DynamicController,_chandlers,_controller,_dynamic,_task,addCollisionHandler,createTask,getCollisionHandler,getDynamic,getTask,postCollider,postTick,shutdown,tick" name="keywords">
 <title>com.whirled.contrib.platformer.game.DynamicController</title>
 </head>
 <body>
@@ -133,6 +133,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#postTick()">postTick</a>():void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">DynamicController</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#shutdown()">shutdown</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">DynamicController</td>
 </tr>
@@ -329,6 +336,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public function postTick():void</code>
+</div>
+<a name="shutdown()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">shutdown</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function shutdown():void</code>
 </div>
 <a name="tick()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
