--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/GameController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/GameController.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="GameController,com.whirled.contrib.platformer.game.GameController,MAX_TICK,_actorMap,_board,_collider,_controllers,_defaultActorClass,_defaultDynamicClass,_defaultShotClass,_dynamicMap,_events,_pause,_rdelta,_shotMap,colliderTicks,forceX,forceY,ticked,addActorClass,addController,addDynamicClass,addShotClass,genCollider,getBoard,getCollider,getController,handleActorAdded,handleDynamicAdded,handleDynamicRemoved,handlePieceLoaded,handleShotAdded,initDynamicClasses,isPaused,removeDynamic,removeDynamicController,run,setBound,setPause,shutdown,tick,updateDisplay" name="keywords">
+<meta content="GameController,com.whirled.contrib.platformer.game.GameController,MAX_TICK,_actorMap,_board,_collider,_controllers,_defaultActorClass,_defaultDynamicClass,_defaultShotClass,_dynamicMap,_events,_pause,_rdelta,_shotMap,colliderTicks,forceX,forceY,ticked,addActorClass,addController,addDynamicClass,addShotClass,genCollider,getBoard,getCollider,getController,handleActorAdded,handleDynamicAdded,handleDynamicRemoved,handlePieceLoaded,handleShotAdded,initDynamicClasses,isPaused,removeDynamic,removeDynamicController,run,sendUpdates,setBound,setPause,shutdown,tick,updateDisplay" name="keywords">
 <title>com.whirled.contrib.platformer.game.GameController</title>
 </head>
 <body>
@@ -306,6 +306,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#handleShotAdded()">handleShotAdded</a>(shot:<a href="../piece/Shot.html">Shot</a>, group:String):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">GameController</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#sendUpdates()">sendUpdates</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">GameController</td>
 </tr>
@@ -831,6 +838,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public function run():void</code>
+</div>
+<a name="sendUpdates()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">sendUpdates</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function sendUpdates():void</code>
 </div>
 <a name="setBound()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
