--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/ShootableController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/ShootableController.html
@@ -70,7 +70,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("In
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#doHit()">doHit</a>(damage:Number):void</div>
+<a class="signatureLink" href="#doHit()">doHit</a>(damage:Number, owner:int):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">ShootableController</td>
 </tr>
@@ -147,10 +147,16 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function doHit(damage:Number):void</code><span class="label">Parameters</span>
+<code>public function doHit(damage:Number, owner:int):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">damage</span>:Number</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">owner</span>:int</code></td>
 </tr>
 </table>
 </div>
