--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/SpawnerController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/SpawnerController.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="SpawnerController,com.whirled.contrib.platformer.game.SpawnerController,_spawnDelay,_spawnInterval,_spawner,doHit,doesCollide,doesHit,getCenterX,getCenterY,postTick,tick" name="keywords">
+<meta content="SpawnerController,com.whirled.contrib.platformer.game.SpawnerController,_spawnDelay,_spawnId,_spawnInterval,_spawnOwner,_spawner,doHit,doesCollide,doesHit,getCenterX,getCenterY,messageReceived,postTick,shutdown,spawn,tick" name="keywords">
 <title>com.whirled.contrib.platformer.game.SpawnerController</title>
 </head>
 <body>
@@ -88,7 +88,15 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">SpawnerController</td>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_spawnId">_spawnId</a> : int<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">SpawnerController</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_spawnInterval">_spawnInterval</a> : Number<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">SpawnerController</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_spawnOwner">_spawnOwner</a> : int<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">SpawnerController</td>
 </tr>
 <tr class="hideInheritedProtectedProperty">
@@ -144,7 +152,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#doHit()">doHit</a>(damage:Number):void</div>
+<a class="signatureLink" href="#doHit()">doHit</a>(damage:Number, owner:int):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">SpawnerController</td>
 </tr>
@@ -203,6 +211,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#shutdown()">shutdown</a>():void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">SpawnerController</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#tick()">tick</a>(delta:Number):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">SpawnerController</td>
@@ -220,7 +235,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <a onclick="javascript:setInheritedVisible(true,'ProtectedMethod');" href="#protectedMethodSummary" class="showHideLink"><img src="../../../../../images/collapsed.gif" class="showHideLinkImage"> Show Inherited Protected Methods</a>
 </div>
 </div>
-<table id="summaryTableProtectedMethod" class="summaryTable hideInheritedProtectedMethod" cellpadding="3" cellspacing="0">
+<table id="summaryTableProtectedMethod" class="summaryTable " cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Method</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
@@ -231,6 +246,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol"><a href="DynamicController.html">DynamicController</a></td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#messageReceived()">messageReceived</a>(event:MessageReceivedEvent):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">SpawnerController</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#spawn()">spawn</a>():void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">SpawnerController</td>
 </tr>
 </table>
 </div>
@@ -259,6 +288,15 @@ showHideInherited();
 <div class="detailBody">
 <code>protected var _spawner:<a href="../piece/Spawner.html">Spawner</a></code>
 </div>
+<a name="_spawnId"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_spawnId</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _spawnId:int</code>
+</div>
 <a name="_spawnInterval"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -267,6 +305,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>protected var _spawnInterval:Number</code>
+</div>
+<a name="_spawnOwner"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_spawnOwner</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _spawnOwner:int</code>
 </div>
 <a name="constructorDetail"></a>
 <div class="detailSectionHeader">Constructor detail</div>
@@ -342,10 +389,16 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function doHit(damage:Number):void</code><span class="label">Parameters</span>
+<code>public function doHit(damage:Number, owner:int):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">damage</span>:Number</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">owner</span>:int</code></td>
 </tr>
 </table>
 </div>
@@ -381,6 +434,20 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="messageReceived()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">messageReceived</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function messageReceived(event:MessageReceivedEvent):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">event</span>:MessageReceivedEvent</code></td>
+</tr>
+</table>
+</div>
 <a name="postTick()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -389,6 +456,24 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public override function postTick():void</code>
+</div>
+<a name="shutdown()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">shutdown</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public override function shutdown():void</code>
+</div>
+<a name="spawn()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">spawn</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function spawn():void</code>
 </div>
 <a name="tick()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
